# useless

./: .gitignore  LICENSE  README.md
javascript/tamagotchi/: README.md  bun.lockb  index.html  package-lock.json  package.json
javascript/tamagotchi/public/: manifest.json
javascript/tamagotchi/src/: main.ts  serviceWorker.js
javascript/tamagotchi/src/biz/: sprite.ts
javascript/tamagotchi/src/components/: TheCanvas.vue
javascript/tamagotchi/src/router/: index.ts
python/: pyproject.toml
python/band_names/: app.py  words.json
python/random_compliment/: app.py  compliments.txt
